--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "AnupBot",
+	"name": "ChatBot",
 	"version": "16.2.23",
-	"description": "A simple Facebook Messenger Bot made by Anup Kumar.",
+	"description": "A simple Facebook Messenger Bot made by ZACH.",
 	"main": "anup.js",
 	"scripts": {
 		"start": "node index",
@@ -10,7 +10,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Anupx0/Anupbot"
+		"url": "https://github.com/Zachh2/fca-zach-bot"
 	},
 	"keywords": [
 		"bot",
@@ -18,10 +18,10 @@
 		"projectanupbot",
 		"messenger"
 	],
-	"author": "Anup Kumar",
+	"author": "zach",
 	"license": "GPL-3.0",
 	"bugs": {
-		"url": "https://github.com/Anupx0/Anupbot/issues"
+		"url": "https://github.com/Zachh2/fca-zach-bot/issues"
 	},
 	"homepage": "https://github.com/Anupx0/Anupbot",
 	"dependencies": {
