--- a/anup-yogesh/package.json
+++ b/anup-yogesh/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fca-zach-bot",
+  "name": "fca-zach2-bot",
   "version": "32.0.1",
   "description": "Fb-Chat Api",
   "main": "index.js",
