--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "fca-zach2-bot",
+	"name": "fca-zach-test",
 	"version": "33.10.20",
 	"description": "A simple Facebook Messenger Bot made by ZACH.",
 	"main": "zach.js",
