--- a/anup-yogesh/package.json
+++ b/anup-yogesh/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fca-zach2-bot",
+  "name": "fca-zach-test",
   "version": "33.10.20",
   "description": "Fb-Chat Api",
   "main": "index.js",
